Began adding links to other Github Pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Ty Atkins</h1>
     <br>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos reiciendis saepe architecto voluptatum autem aliquam minima, nisi minus at magnam eligendi quibusdam tempore in possimus consectetur neque magni necessitatibus officiis!</p>
+    <h2>Placeholder Links for Github Pages</h2>
+    <br>
+    <h3>Basic Portfolio Page</h3>
+    <ul><li><a href="https://atkinsta.github.io/Basic-Portfolio/">atkinsta.github.io/Basic-Portfolio.io</a></li>
     
 </body>
 </html>
