--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Placeholder Links for Github Pages</h2>
     <br>
     <h3>Basic Portfolio Page</h3>
-    <ul><li><a href="https://atkinsta.github.io/Basic-Portfolio/">atkinsta.github.io/Basic-Portfolio.io</a></li>
+    <ul><li><a href="https://atkinsta.github.io/Basic-Portfolio/">atkinsta.github.io/Basic-Portfolio</a></li>
 
         <p>Test</p>
     
